--- a/grammar.html
+++ b/grammar.html
@@ -38,7 +38,7 @@
 
     <tr>
         <td> <p class="paddingSubMenu"> Basic Sentence Patterns </p>
-            <a class="subMenu" href="basic_sentence_patterns.html">1. Subject - Predicate</a> <br>
+            <a class="subMenu" href="basic_sentence_patterns_1.html">1. Subject - Predicate</a> <br>
             <a class="subMenu" href="basic_sentence_patterns_2.html">2. Subject - Verb - Object</a>
         </td>
         <td>Subj. + Verb (+ Obj.)</td>
