--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <p id="GlowKidsP">
             <a id="GlowKidsImgHref" href="index.html">
                 <object align="center" width="140px" height="110px" data="Pictures/logo.png"></object>
-            </a>    Glow Kids
+            </a>    
+            Glow Kids
         </p>
         
         <p id="navBar">
@@ -83,14 +84,14 @@
             </div>
         </a>
 
-        <a href="courses.html#vocabularyDescP">
+        <a href="courses.html#grammarDescP">
             <div id="course2">
                 <img class="courseImgBorderRad" src="Pictures/yufa.jpg" width="300px" height="200px" alt="">
                 <p class="courseP">Grammar</p>
             </div>
         </a>
 
-        <a href="courses.html#tatabahasaDescP">
+        <a href="courses.html#vocabularyDescP">
             <div id="course3">
                 <img class="courseImgBorderRad" src="Pictures/fayin.jpg" width="300px" height="200px" alt="">
                 <p class="courseP">Pronounciation</p>
@@ -104,28 +105,36 @@
 <h1 id="vidH1">Videos</h1>
 
 <div id="VideoDescDiv">
+    <a href="video1.html">
         <div id="VidImgDiv">
-            <div class="vidDiv"><img class="VidImg" src="Pictures/vid1.jpg" alt="">
-                <p class="vidDescP">This video is about...
-                </p>
-            </div>
-
-            <div class="vidDiv"><img class="VidImg" src="Pictures/vid2.jpg" alt="">
-                <p class="vidDescP">This video is about... 
-                </p>
-
-            </div>
-
-            <div class="vidDiv"><img class="VidImg" src="Pictures/vid3.jpg" alt="">
-                <p class="vidDescP">This video is about...
-                </p>
-            </div>
-            
-            <div class="vidDiv"><img class="VidImg" src="Pictures/vid4.jpg" alt="">
+            <div class="vidDiv"><img class="VidImg" src="Pictures/vid1pic.jpg" alt="">
                 <p class="vidDescP">This video is about...
                 </p>
             </div>
         </div>
+    </a>
+
+    <a href="video2.html">
+            <div class="vidDiv"><img class="VidImg" src="Pictures/vid2pic.jpg" alt="">
+                <p class="vidDescP">This video is about... 
+                </p>
+            </div>
+    </a>
+
+    <a href="video3.html">
+            <div class="vidDiv"><img class="VidImg" src="Pictures/vid3pic.jpg" alt="">
+                <p class="vidDescP">This video is about...
+                </p>
+            </div>
+    </a>
+
+    <a href="video4.html">
+            <div class="vidDiv"><img class="VidImg" src="Pictures/vid4pic.jpg" alt="">
+                <p class="vidDescP">This video is about...
+                </p>
+            </div>
+        </div>
+    </a>
 </div>
 
 <!-- Footer -->
