--- a/vocab_HSK3_5.html
+++ b/vocab_HSK3_5.html
@@ -12,7 +12,8 @@
         <p id="GlowKidsP">
             <a id="GlowKidsImgHref" href="index.html">
                 <object align="center" width="140px" height="110px" data="Pictures/logo.png"></object>
-            </a>    Glow Kids
+            </a>    
+            Glow Kids
         </p>
         
         <p id="navBar">
