--- a/index.html
+++ b/index.html
@@ -107,34 +107,31 @@
 <div id="VideoDescDiv">
     <a href="video1.html">
         <div id="VidImgDiv">
-            <div class="vidDiv"><img class="VidImg" src="Pictures/vid1pic.jpg" alt="">
-                <p class="vidDescP">This video is about...
+            <div class="vidDiv" style="margin-top: 50px; margin-left: 300px;"><img class="VidImg" src="Pictures/vid1pic.jpg" alt="">
+                <p class="vidDescP">望庐山瀑布 唐·李白
                 </p>
             </div>
         </div>
     </a>
 
     <a href="video2.html">
-            <div class="vidDiv"><img class="VidImg" src="Pictures/vid2pic.jpg" alt="">
-                <p class="vidDescP">This video is about... 
-                </p>
-            </div>
-    </a>
-
-    <a href="video3.html">
-            <div class="vidDiv"><img class="VidImg" src="Pictures/vid3pic.jpg" alt="">
-                <p class="vidDescP">This video is about...
-                </p>
-            </div>
-    </a>
-
-    <a href="video4.html">
-            <div class="vidDiv"><img class="VidImg" src="Pictures/vid4pic.jpg" alt="">
-                <p class="vidDescP">This video is about...
+        <div id="VidImgDiv">
+            <div class="vidDiv"><img class="VidImg" src="Pictures/vid2pic.png" style="height: 151.88px">
+                <p class="vidDescP">探索汉语 白乐桑
                 </p>
             </div>
         </div>
     </a>
+
+    <a href="video3.html">
+        <div id="VidImgDiv">
+            <div class="vidDiv" style="margin-top: -50px"><img class="VidImg" src="Pictures/vid3pic.jpg" alt="">
+                <p class="vidDescP">早发白帝城 唐·李白
+                </p>
+            </div>
+            </div>
+    </a>
+
 </div>
 
 <!-- Footer -->
