--- a/video3.html
+++ b/video3.html
@@ -30,12 +30,12 @@
 
     <!--video-->
     <div id="vidTest">
-        <h1 style="padding-top: 150px; text-align:center" >望庐山瀑布</h1>
+        <h1 style="padding-top: 150px; text-align:center" >早发白帝城</h1>
         <h2 style="text-align:center">唐·李白</h2>
     </div>
     <div id="videoBtn" class="center" style="max-width:700px;">
         <video controls="false"  muted="muted" id="video1" name="media" style="width:700px; height: 400px;" text-align:"center">
-            <source src="Videos/vid1.mp4" type="video/mp4">
+            <source src="Videos/vid3.mp4" type="video/mp4">
         </video>
     </div>
     <script>
