--- a/pronounciation.html
+++ b/pronounciation.html
@@ -45,107 +45,64 @@
 <p class="fontBlack"><strong>Consonants in Mandarin</strong></p>
 <p class="fontBlack"><strong>Consonants that are read the same as English include:</strong></p>
 <ul>
-    <li class="fontGrey">f, l, m, n, s, w, y</li>
+    <li class="fontGrey">p, m, f, t, n, k, sh, ch</li>
 </ul>
 
 <p class="fontGrey"><strong>Meanwhile, the consonants whose sound is slightly different from English are:</strong></p>
 <ul>
-    <li class="fontGrey">b, dilafalkan seperti huruf ‘p’ dalam bahasa Indonesia
-        <br> contoh: 爸 (Bà) – dibaca ‘pa’ – arti: ayah
+    <li class="fontGrey">h, Varies between h in English hat and ch in Scottish loch.
+        <br> example: 火 (huǒ) – pronounced 'huo' – meaning: fire
     </li>
-    <li class="fontGrey">p, dilafalkan seperti ‘ph’
-        <br> contoh: 怕 (Pà) – dibaca ‘pha’ – arti: takut
+    <li class="fontGrey">j, pronounced like 'ch'
+        <br> example: 叫 (jiào) – pronounced 'chiao' – meaning: shout
     </li>
-    <li class="fontGrey">
-        d, dilafalkan seperti huruf ‘t’
-        <br> contoh: 大(Dà) – dibaca ‘ta’ – arti: besar
-    </li>
-    <li class="fontGrey">
-        t, dilafalkan seperti ‘th’
-        <br> contoh: 他 (Tā) – dibaca ‘tha’ – arti: dia
+    <li class="fontGrey">z, pronounced like 'dz'
+        <br>IPA symbol:[ts]
+        <br> example: 脏 (zàng) – pronounced 'dzang' – meaning: dirty
     </li>
     <li class="fontGrey">
-        t, dilafalkan seperti ‘th’
-        <br> contoh: 他 (Tā) – dibaca ‘tha’ – arti: dia
-    </li>
-    <li class="fontGrey">
-        g, dilafalkan seperti huruf ‘k’
-        <br> contoh: 高 (Gāo) – dibaca ‘kao’ – arti: tinggi
-    </li>
-    <li class="fontGrey">
-        k, dilafalkan seperti ‘kh’
-        <br> contoh: 口 (Kǒu) – dibaca ‘khou’ – arti: mulut
-    </li>
-    <li class="fontGrey">
-        j, dilafalkan seperti huruf ‘c’
-        <br> contoh: 家(Jiā) – dibaca ‘cia’ – arti: rumah
-    </li>
-    <li class="fontGrey">
-        q, dilafalkan seperti ‘ch’
-        <br> contoh: 去 (Qù) – dibaca ‘chi’ – arti: pergi
-    </li>
-    <li class="fontGrey">
-        x, dilafalkan seperti huruf ‘s’
-        <br> contoh: 小 (Xiǎo) – dibaca ‘siao’ – arti: kecil
-    </li>
-    <li class="fontGrey">
-        r, dilafalkan seperti huruf ‘r’ tetapi dengan lidah ditekuk ke langit-langit mulut
-        <br> contoh: 热 (Rè) – dibaca: ‘re’ -arti: panas
-    </li>
-    <li class="fontGrey">
-        z, dilafalkan seperti huruf ‘c’
-        <br> contoh: 早 (Zǎo) – dibaca ‘cao’ – arti: pagi
-    </li>
-    <li class="fontGrey">
-        c, dilafalkan seperti ‘ch’
-        <br> contoh: 从 (Cóng) – dibaca ‘chong’ – arti: dari
+        c, pronounced like 'ts'
+        <br>IPA symbol:[tsh]
+        <br> example: 从 (Cóng) – pronounced ‘tsong’ – meaning: from
     </li>
 </ul>
 
 <p class="fontBlack"><strong>There are also consonants that do not exist in English, including:</strong></p>
 <ul>
-    <li class="fontGrey">zh, dilafalkan seperti ‘c’ tetapi dengan lidah ditekuk ke langit-langit mulut
-        <br> contoh: 这 (Zhè) – dibaca ‘ce’ – arti: ini
-    </li>
-    <li class="fontGrey">
-        ch, dilafalkan seperti ‘ch’ tetapi dengan lidah ditekuk ke langit-langit mulut
-        <br> contoh: 出(Chū) – dibaca ‘chu’ – arti: keluar
-    </li>
-    <li class="fontGrey">
-        sh, dibaca seperti ‘sh’ tetapi dengan lidah ditekuk ke langit-langit mulut
-        <br> contoh: 树 (Shù) – dibaca ‘shu’ – arti: pohon
+    <li class="fontGrey">zh, pronounced like 'c' but with the tongue bent towards the roof of the mouth
+        <br> contoh: 这 (Zhè) – pronounced ‘ce’ – meaning: this
     </li>
 </ul>
 
 <p class="fontBlack"><strong>Some consonants have special rules, for example:</strong></p>
 <li class="fontGrey">
-    apabila ‘w’ diikuti dengan huruf ‘u’, maka dilafalkan seperti ‘u’
- <br> contoh: 午安 (Wǔ ān) – dibaca ‘u an’ – arti: selamat siang
+    If 'w' is followed by the letter 'u', it is pronounced like 'woo'
+ <br> example: 午安 (Wǔ ān) – pronounced ‘woo an’ – meaning: good afternoon
 </li>
 <li class="fontGrey">
-    apabila ‘y’ diikuti dengan huruf ‘i’, maka dilafalkan seperti ‘i’
- <br> contoh: 一 (Yī) – dibaca ‘i’ – arti: satu
+    If 'y' is followed by the letter 'i', it is pronounced like the letter 'e'
+ <br> example: 一 (Yī) – pronounced ‘e’ – meaning: one
 </li>
 <li class="fontGrey">
-    apabila ‘s’, ‘sh’, ‘c’, ‘ch’, ‘z’, dan ‘zh’ diikuti huruf ‘i’, maka huruf ‘i’ tersebut dilafalkan seperti huruf ‘e’ pada kata ‘dekat’. Contoh:
+    If 's', 'sh', 'c', 'ch', 'z', and 'zh' are followed by the letter 'i', then the letter 'i' is pronounced like the letter 'e'. Example:
     <ul>
         <li class="fontGrey">
-            四 (Sì) – dibaca ‘se’ – arti: empat
+            四 (Sì) – pronounced ‘se’ – meaning: four
         </li>
         <li class="fontGrey">
-            是 (Shì) – dibaca ‘she’ – arti: adalah
+            是 (Shì) – pronounced ‘she’ – meaning: is
         </li>
         <li class="fontGrey">
-            吃 (Chī) – dibaca ‘che’ – arti: makan
+            吃 (Chī) – pronounced ‘che’ – meaning: eat
         </li>
         <li class="fontGrey">
-            自己 (Zìjǐ) – dibaca ‘ce ci’ – arti: diri sendiri
+            自己 (Zìjǐ) – pronounced ‘ce ci’ – meaning: oneself
         </li>
     </ul>
 </li>
 
-<p class="fontGrey">Sementara untuk huruf-huruf vokal pada pinyin rata-rata dibaca seperti pada bahasa Indonesia. Namun, terdapat satu huruf vokal tambahan yaitu ‘ü’. Huruf ‘ü’ ini dilafalkan seperti ‘i’ dengan bentuk mulut ‘u’. Contoh:</p>
-<ul><li class="fontGrey">鱼 (Yú) – dibaca ‘yi’ – arti: ikan</li></ul>
+<p class="fontGrey">There is one additional vowel, namely 'ü'. The letter 'ü' is pronounced like 'ee' then slowly round your lips(like when you whistle). Example:
+<ul><li class="fontGrey">鱼 (Yú) – pronounced ‘yee’ – meaning: fish</li></ul>
 
 <p class="fontBlack"><strong>Tone</strong></p>
 <p class="fontGrey">Mandarin is a tonal language. That is, the sound spoken affects the meaning of the words spoken. A word, if said in the wrong tone, can cause miscommunication.</p>
