update about page

--- a/about.html
+++ b/about.html
@@ -28,10 +28,15 @@
 
     <!--Div 1 -->
         <div id="LearnMandarinDescDiv">
-            <object align="left" data="Pictures/ecust.jpg" width="300px" height="400px" type=""></object>
+            <object align="left" data="Pictures/logo.png" width="250px" height="250px" type=""></object>
             <h1 id="LearnMandarinH1"> About us </h1>
             <p id="LearnMandarinDescP">
-                123
+                We are a group of international students studying at ECUST(East China University of Science and Technology) dedicated to helping others like us study chinese.
+                We are lead by our instructor, Teacher Yu(于涛), who is a chinese professer here at ECUST teaching both undergraduate students and short term Chinese programs.
+                She has a lot of experience in teaching beginners who are zero-based. 
+                This group currently consists of 3 students: one from Malaysia, one from Myanmar and one from Poland. 
+                Currently, 2 of us are juniors and one is a sophomore. One study's media (she is the one who made all the videos) and the other two study's Computer Science (did the coding part).
+                <br>Hopefully this website has assisted whomever has accessed it! Good luck on your studies! 
             </p>
         </div>
 
