--- a/vocab_HSK3_6.html
+++ b/vocab_HSK3_6.html
@@ -141,7 +141,7 @@
     
 </tbody></table>
 
-<p class="fontGrey" id="nextPage">Page 6 out of 10 Page</p>
+<p class="fontGrey" id="nextPage">Page 6 out of 10 Pages</p>
 <div class="pagination">
     <a id="fontPagination" href="vocab_HSK3_5.html">&laquo;</a>
     <a id="fontPagination" href="vocab_HSK3_1.html">1</a>
