update vocab hsk3-6

--- a/vocab_HSK3_6.html
+++ b/vocab_HSK3_6.html
@@ -36,7 +36,7 @@
     <img src="/HSK Word/HSK 1 Vocabulary list_page-0005.jpg" width="70%" height="70%" alt="">
 </center> -->
 <table>
-<p class="fontBlack" id="daftarKosakata">Daftar Kosakata NEW HSK 3 Part 6</p>
+<p class="fontBlack" id="vocabList">Vocabulary List NEW HSK 3 Part 6</p>
     <tr class="fontBlack"><td>No</td><td>Mandarin</td><td>Pinyin</td><td>Definition</td></tr>
     <tr><td>501</td><td>奶茶</td><td>nǎichá</td><td>Milk Tea</td></tr>
     <tr><td>502</td><td>男子</td><td>nánzǐ</td><td>men</td></tr>
