update select page section

--- a/vocab_HSK3_1.html
+++ b/vocab_HSK3_1.html
@@ -137,16 +137,16 @@
 <div class="pagination">
     <a id="fontPagination" href="#" onclick="return false">&laquo;</a>
     <a id="fontPagination" class="active" href="#" onclick="return false">1</a>
-    <a id="fontPagination" href="vocabHSK3_2.html">2</a>
-    <a id="fontPagination" href="vocabHSK3_3.html">3</a>
-    <a id="fontPagination" href="vocabHSK3_4.html">4</a>
-    <a id="fontPagination" href="vocabHSK3_5.html">5</a>
-    <a id="fontPagination" href="vocabHSK3_6.html">6</a>
-    <a id="fontPagination" href="vocabHSK3_7.html">7</a>
-    <a id="fontPagination" href="vocabHSK3_8.html">8</a>
-    <a id="fontPagination" href="vocabHSK3_9.html">9</a>
-    <a id="fontPagination" href="vocabHSK3_10.html">10</a>
-    <a id="fontPagination" href="vocabHSK3_2.html">&raquo;</a>
+    <a id="fontPagination" href="vocab_HSK3_2.html">2</a>
+    <a id="fontPagination" href="vocab_HSK3_3.html">3</a>
+    <a id="fontPagination" href="vocab_HSK3_4.html">4</a>
+    <a id="fontPagination" href="vocab_HSK3_5.html">5</a>
+    <a id="fontPagination" href="vocab_HSK3_6.html">6</a>
+    <a id="fontPagination" href="vocab_HSK3_7.html">7</a>
+    <a id="fontPagination" href="vocab_HSK3_8.html">8</a>
+    <a id="fontPagination" href="vocab_HSK3_9.html">9</a>
+    <a id="fontPagination" href="vocab_HSK3_10.html">10</a>
+    <a id="fontPagination" href="vocab_HSK3_2.html">&raquo;</a>
   </div>
 
 
