--- a/words_with_shi.html
+++ b/words_with_shi.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grammar</title>
     <link rel="stylesheet" href="words_with_shi.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
