--- a/grammar.html
+++ b/grammar.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grammar</title>
     <link rel="stylesheet" href="grammar.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -26,8 +27,7 @@
 
     <!-- Body -->
 <div class="headerPadding"></div>
-
-<p id="titleP">Basic Sentence Patterns</p>
+<p id="titleP" style="padding-top: 100px;">Basic Sentence Patterns</p>
 
 <table class="descFont">
     <tr>
